--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -4,9 +4,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
         <title>TravelBloom</title>
+        <link rel="stylesheet" type="text/css" href="estilo.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=travel" />
     </head>
     <body>
-
-        
+        <div class="parent">
+            <header>
+                <nav>
+                    <ul>
+                        <li>
+                            <span class="material-symbols-outlined">travel</span>
+                        </li>
+                        <li>
+                            <span>TravelBloom</span>
+                        </li>
+                      <li><a href="/">Home</a></li>
+                      <li><a href="/about">About Us</a></li>
+                      <li><a href="/contact">Contact Us</a></li>
+                    </ul>
+                    <div>
+                      <input type="text" id="txtBusqueda" placeholder="Search for recommendations...">
+                      <button id="cmdBusqueda">Search</button>
+                      <button id="cmdReset">Reset</button>
+                    </div>
+                  </nav>
+            </header>
+            <main>
+                <div class="split-main">
+                    <div class="pane">
+                        <h1>
+                            EXPLORE DREAM DESTINATION
+                        </h1>
+                        <h5>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed ullam alias perspiciatis dolor, molestias enim, natus hic voluptatem porro sunt libero eaque cupiditate odio neque praesentium aliquid quas ex repudiandae?
+                        </h5>
+                    </div>
+                    <div class="pane">
+                        <div>
+                            placeholder
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
+        <script src="travel_recommendation.js"></script>
     </body>
 </html>
