--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -18,9 +18,9 @@
                         <li>
                             <span>TravelBloom</span>
                         </li>
-                      <li><a href="/">Home</a></li>
-                      <li><a href="/about">About Us</a></li>
-                      <li><a href="/contact">Contact Us</a></li>
+                      <li><a href="travel_recommendation.html">Home</a></li>
+                      <li><a href="about_us.html">About Us</a></li>
+                      <li><a href="contact_us.html">Contact Us</a></li>
                     </ul>
                     <div>
                       <input type="text" id="txtBusqueda" placeholder="Search for recommendations...">
@@ -32,17 +32,14 @@
             <main>
                 <div class="split-main">
                     <div class="pane">
-                        <h1>
+                        <h1 class="main-titulo">
                             EXPLORE DREAM DESTINATION
                         </h1>
-                        <h5>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed ullam alias perspiciatis dolor, molestias enim, natus hic voluptatem porro sunt libero eaque cupiditate odio neque praesentium aliquid quas ex repudiandae?
-                        </h5>
+                        <p class="main-contenido">It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivates the heart and ignites a sense of wonder.
+                        </p>
                     </div>
                     <div class="pane">
-                        <div>
-                            placeholder
-                        </div>
+                        <div id="resultados"></div>
                     </div>
                 </div>
             </main>
